# GWDatasetGeneration

./: .gitignore  .pre-commit-config.yaml  Plotting.ipynb  README.md  config.yaml  create.sub  download.sub  env.yml  injections.py  load_data.py  main.py  pyproject.toml  set_seed.py  transforms.py  utils.py  waveforms.py
cluster/: create_BBH.sub  create_BBH_train.sub  create_BNS.sub  create_BNS_test.sub  create_BNS_train.sub
configs/: config_BBH.yaml  config_BNS.yaml  config_BNS_test.yaml  config_BNS_train.yaml
eval/: Plotting.ipynb  classification.ipynb  inference_script.py
results/benedict/: v2z6t9wz.csv
src/: injections.py  load_data.py  main.py  transforms.py  utils.py  waveforms.py
