[project]
name = "gwdatasetgeneration"
version = "0.1.0"
description = "Generate data for ML tasks in gravitational wave physics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gwpy>=3.0.13",
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "ml4gw==0.7.6",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
